// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineGraph should render 1`] = `
<DocumentFragment>
  <div>
    <svg
      class="w-full h-5"
      data-testid="LineGraph__svg"
    >
      <rect
        class="fill-current text-theme-success-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="42"
        x="0"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-warning-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="22"
        x="50"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-info-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="20"
        x="80"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LineGraph should render as empty 1`] = `
<DocumentFragment>
  <div>
    <svg
      class="w-full h-5"
      data-testid="LineGraph__svg"
    >
      <rect
        class="fill-current text-theme-secondary-300 dark:text-theme-secondary-800"
        data-testid="LineGraph__empty"
        height="8"
        rx="4"
        width="100"
        x="0"
        y="8"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LineGraph should render legend 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex justify-end mb-1"
      data-testid="LineGraph__legend"
    >
      <ul>
        <li>
          item 1 value: 50
        </li>
        <li>
          item 2 value: 30
        </li>
        <li>
          item 3 value: 20
        </li>
      </ul>
    </div>
    <svg
      class="w-full h-5"
      data-testid="LineGraph__svg"
    >
      <rect
        class="fill-current text-theme-success-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="42"
        x="0"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-warning-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="22"
        x="50"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-info-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="20"
        x="80"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LineGraph should render tooltip on hover 1`] = `
<DocumentFragment>
  <div>
    <div
      class="absolute z-10 duration-200 transition-opacity opacity-0 hidden"
      style="top: -48px;"
    >
      <div
        data-testid="TooltipContent"
      >
        item 2 value: 30
      </div>
    </div>
    <svg
      class="w-full h-5"
      data-testid="LineGraph__svg"
    >
      <rect
        class="fill-current text-theme-success-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="42"
        x="0"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-warning-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="22"
        x="50"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
      <rect
        class="fill-current text-theme-info-600"
        data-testid="LineGraph__item"
        height="8"
        rx="4"
        width="20"
        x="80"
        y="8"
      >
        <animate
          attributeName="height"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="16"
        />
        <animate
          attributeName="height"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="16"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="4"
          to="8"
        />
        <animate
          attributeName="rx"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="8"
          to="4"
        />
        <animate
          attributeName="y"
          begin="mouseover"
          dur="0.1s"
          fill="freeze"
          from="8"
          to="0"
        />
        <animate
          attributeName="y"
          begin="mouseleave"
          dur="0.15s"
          fill="freeze"
          from="0"
          to="8"
        />
      </rect>
    </svg>
  </div>
</DocumentFragment>
`;
